proposition de résolution de ton bug ^^

--- a/WebApplication1/index.html
+++ b/WebApplication1/index.html
@@ -1,12 +1,10 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Masterpage.master.cs" Inherits="WebApplication1.Masterpage" %>
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Short and Full Length movie</title>
-    <link rel="stylesheet" type="text/css" href="~/Styles/StyleSheet.css" />
+    <link rel="stylesheet" type="text/css" href="Styles/StyleSheet.css" />
 </head>
 <body>
     <form id="form1" runat="server">
